# rollover-rs

./: Cargo.toml  README.md
examples/: admin_operations.rs  check_and_track.rs  credit_topup.rs  credits.rs  error_handling.rs  graceful_degradation.rs  idempotency.rs  metered_api.rs  middleware.rs  multi_feature_gate.rs  pagination.rs  plans.rs  pricing_page.rs  provisioning.rs  subscriptions.rs  usage_dashboard.rs  webhooks.rs
src/: analytics.rs  client.rs  credits.rs  errors.rs  invoices.rs  lib.rs  organization.rs  pagination.rs  plans.rs  subscriptions.rs  types.rs  usage.rs
tests/: analytics_test.rs  client_test.rs  credits_test.rs  errors_test.rs  invoices_test.rs  organization_test.rs  pagination_test.rs  plans_test.rs  subscriptions_test.rs  usage_test.rs
tests/common/: mod.rs
