[package]
name = "rollover"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Rollover subscription billing API"
license = "MIT"
repository = "https://github.com/rolloverdotdev/rollover-rust"
keywords = ["rollover", "billing", "subscriptions", "x402", "usdc"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
